and this project adheres to http://semver.org/spec/v2.0.0.html[Semantic Versioning].

[discrete]
==== Versions

toc::[]

== link:{link-repository}/releases/latest[Unreleased]

=== Added

* `or` ArgumentConstraint
* `spiesOnly` in the Gradle extension, in order to tell the processor to only create `kspy`, while adding all known mocks
* `vararg` is now supported by Mocks
* `freezeOnDefault` in the Gradle extension, which sets a default freeze value for `kspy` and `kmock`
* `enableNewOverloadingNames` and `useTypePrefixFor` for overloaded names in order to ease them
* `customMethodNames` in order to allow complete custom names for methods
* `allowInterfaces`, which combines `allowInterfacesOnKmock` and `allowInterfacesOnKspy`
* `disableFactories` in order to disable the generation of `kmock` and `kspy` if needed

=== Changed

* Generated mocks don't contain runtime logic any longer
* Mutable properties of Proxies now separate froze/unfrozen state more cleaner to improve Runtime
* `kmock` and `kspy` are using now a shared function to improve compile time
* Non intrusive behaviour (spy & relaxation) is now resolved by proxy invocation rather then by proxy initialisation in order to cover edge cases

=== Deprecated

* `uselessPrefixes` in the Gradle Extension

=== Removed

* `allowedRecursiveTypes`, since it is no longer needed due to the new spy invocation
* `allowInterfacesOnKmock`, use allowInterfaces instead
* `allowInterfacesOnKspy`, use allowInterfaces instead

=== Fixed

* Method names with nullable or multi-bounded types defined as generic parameter
* Scoped extension are now correctly resolved

=== Security

=== Bumped

* KotlinPoet 1.10.2 -> 1.11.0
* Gradle 7.4.1 -> 7.4.2


== https://github.com/bitPogo/kmock/compare/v0.1.0\...v0.1.1[0.1.1]

=== Fixed

* Warnings for unused expression and unused parameter in MockFactory

=== Bumped

* Gradle 7.2 -> 7.4.1

== https://github.com/bitPogo/kmock/compare/v0.1.0[0.1.0]

Initial release.